--- a/free-hero-rotation.html
+++ b/free-hero-rotation.html
@@ -66,6 +66,148 @@
         (adsbygoogle = window.adsbygoogle || []).push({});
         </script>
 
+        <h2>May 19th - May 26th 2015</h2>
+        <div class="btn-group btn-group-primary">
+          <button data-toggle="dropdown" class="btn btn-danger" type="button">Anub'arak</button>
+          <button data-toggle="dropdown" class="btn btn-danger dropdown-toggle" type="button"><span class="caret"></span>
+          </button>
+          <ul class="dropdown-menu">
+            <li><a><b>C9 iDream's Talent Order</b></a></li>
+            <li><a>Level 1 - Assault Scarab</a></li>
+            <li><a>Level 4 - Underking</a></li>
+            <li><a>Level 7 - Bed of Barbs</a></li>
+            <li><a>Level 10 - Locust Swarm</a></li>
+            <li><a>Level 13 - Spell Shield</a></li>
+            <li><a>Level 16 - Blood for Blood</a></li>
+            <li><a>Level 20 - Rewind</a></li>
+            <li class="divider"></li>
+            <li><a href="http://www.heroesnexus.com/talent-calculator/38-anubarak#jPmPgPPNKNMNGNmAA">Zuna's Talent Build</a></li>
+            <li class="divider"></li>
+            <li><a href="http://www.heroesfire.com/hots/wiki/heroes/anubarak">Hero Information</a></li>
+          </ul>
+        </div>
+        <div class="btn-group btn-group-primary">
+          <button data-toggle="dropdown" class="btn btn-info" type="button">Brightwing</button>
+          <button data-toggle="dropdown" class="btn btn-info dropdown-toggle" type="button"><span class="caret"></span>
+          </button>
+          <ul class="dropdown-menu">
+            <li><a><b>C9 iDream's Talent Order</b></a></li>
+            <li><a>Level 1 - Scouting Drone</a></li>
+            <li><a>Level 4 - Promote</a></li>
+            <li><a>Level 7 - Gust of Healing</a></li>
+            <li><a>Level 10 - Emerald Wind</a></li>
+            <li><a>Level 13 - Sprint</a></li>
+            <li><a>Level 16 - Critterize</a></li>
+            <li><a>Level 20 - Rewind</a></li>
+            <li class="divider"></li>
+            <li><a href="http://www.heroesnexus.com/talent-calculator/26-brightwing#jPIIwPnIFIEPJPaAA">Zuna's Talent Build</a></li>
+            <li class="divider"></li>
+            <li><a href="http://www.heroesfire.com/hots/wiki/heroes/brightwing">Hero Information</a></li>
+          </ul>
+        </div>
+        <div class="btn-group btn-group-primary">
+          <button data-toggle="dropdown" class="btn btn-primary" type="button">Kerrigan</button>
+          <button data-toggle="dropdown" class="btn btn-primary dropdown-toggle" type="button"><span class="caret"></span>
+          </button>
+          <ul class="dropdown-menu">
+            <li><a><b>C9 iDream's Talent Order</b></a></li>
+            <li><a>Level 1 - Sweeping Grasp</a></li>
+            <li><a>Level 4 - Envenom</a></li>
+            <li><a>Level 7 - Impailing Swarm</a></li>
+            <li><a>Level 10 - Maelstrom</a></li>
+            <li><a>Level 13 - Sprint</a></li>
+            <li><a>Level 16 - Blood for Blood</a></li>
+            <li><a>Level 20 - Bolt of the Storm</a></li>
+            <li class="divider"></li>
+            <li><a href="http://www.heroesnexus.com/talent-calculator/12-kerrigan#oPmPwPPDtI_OvFMAA">Zuna's Talent Build</a></li>
+            <li><a href="https://www.youtube.com/watch?v=t8yB4yiBtWk">Video Commentary</a></li>
+            <li class="divider"></li>
+            <li><a href="http://www.heroesfire.com/hots/wiki/heroes/kerrigan">Hero Information</a></li>
+          </ul>
+        </div>
+        <div class="btn-group btn-group-primary">
+          <button data-toggle="dropdown" class="btn btn-danger" type="button">Muradin</button>
+          <button data-toggle="dropdown" class="btn btn-danger dropdown-toggle" type="button"><span class="caret"></span>
+          </button>
+          <ul class="dropdown-menu">
+            <li><a><b>C9 iDream's Talent Order</b></a></li>
+            <li><a>Level 1 - Perfect Storm</a></li>
+            <li><a>Level 4 - Sledgehammer</a></li>
+            <li><a>Level 7 - Piercing Bolt</a></li>
+            <li><a>Level 10 - Avatar</a></li>
+            <li><a>Level 13 - Thunderstrike</a></li>
+            <li><a>Level 16 - Stoneform</a></li>
+            <li><a>Level 20 - Rewind</a></li>
+            <li class="divider"></li>
+            <li><a href="http://www.heroesnexus.com/talent-calculator/22-muradin#jPNGEJfD6HOGMGWAA">Zuna's Talent Build</a></li>
+            <li class="divider"></li>
+            <li><a href="http://www.heroesfire.com/hots/wiki/heroes/muradin">Hero Information</a></li>
+          </ul>
+        </div>
+        <div class="btn-group btn-group-primary">
+          <button data-toggle="dropdown" class="btn btn-primary" type="button">Raynor</button>
+          <button data-toggle="dropdown" class="btn btn-primary dropdown-toggle" type="button"><span class="caret"></span>
+          </button>
+          <ul class="dropdown-menu">
+            <li><a><b>C9 iDream's Talent Order</b></a></li>
+            <li><a>Level 1 - Give Me More!</a></li>
+            <li><a>Level 4 - Confident Aim</a></li>
+            <li><a>Level 7 - Hamstring Shot</a></li>
+            <li><a>Level 10 - Raynor's Raiders</a></li>
+            <li><a>Level 13 - Double Barreled</a></li>
+            <li><a>Level 16 - Bullseye</a></li>
+            <li><a>Level 20 - Bolt of the Storm</a></li>
+            <li class="divider"></li>
+            <li><a href="http://www.heroesnexus.com/talent-calculator/3-raynor#oPWGSPCBaGPPZGDAA">Zuna's Talent Build</a></li>
+            <li class="divider"></li>
+            <li><a href="http://www.heroesfire.com/hots/wiki/heroes/raynor">Hero Information</a></li>
+          </ul>
+        </div>
+
+        <h3>Unlocked level 12</h3>
+        <div class="btn-group btn-group-primary">
+          <button data-toggle="dropdown" class="btn btn-success" type="button">Nazeebo</button>
+          <button data-toggle="dropdown" class="btn btn-success dropdown-toggle" type="button"><span class="caret"></span>
+          </button>
+          <ul class="dropdown-menu">
+            <li><a><b>C9 iDream's Talent Ordder</b></a></li>
+            <li><a>Level 1 - Death Ritual</a></li>
+            <li><a>Level 4 - Spider Cluster</a></li>
+            <li><a>Level 7 - Gidbinn</a></li>
+            <li><a>Level 10 - Ravenous Spirit</a></li>
+            <li><a>Level 13 - Sprint</a></li>
+            <li><a>Level 16 - Leaping Spiders</a></li>
+            <li><a>Level 20 - Annihilating Spirit</a></li>
+            <li class="divider"></li>          
+            <li><a href="http://www.heroesnexus.com/talent-calculator/4-nazeebo#xHlLwPfC6OIPgCEAA">Zuna's Talent Build</a></li>
+            <li class="divider"></li>          
+            <li><a href="http://www.heroesfire.com/hots/wiki/heroes/nazeebo">Hero Information</a></li>
+          </ul>
+        </div>
+
+        <h3>Unlocked level 15</h3>
+        <div class="btn-group btn-group-primary">
+          <button data-toggle="dropdown" class="btn btn-success" type="button">The Lost Vikings</button>
+          <button data-toggle="dropdown" class="btn btn-success dropdown-toggle" type="button"><span class="caret"></span>
+          </button>
+          <ul class="dropdown-menu">
+            <li><a><b>C9 iDream's Talent Order</b></a></li>
+            <li><a>Level 1 - Viking Hoard</a></li>
+            <li><a>Level 4 - Spin to Win!</a></li>
+            <li><a>Level 7 - Jump!</a></li>
+            <li><a>Level 10 - Longboat Raid!</a></li>
+            <li><a>Level 13 - Impatience is a Virtue</a></li>
+            <li><a>Level 16 - Norse Force!</a></li>
+            <li><a>Level 20 - Ragnarok 'n' Roll!</a></li>
+            <li class="divider"></li>
+            <li><a href="http://www.heroesnexus.com/talent-calculator/45-the-lost-vikings#4P3P2PzPDQBQAQtAA">Zuna's Talent Build</a></li>
+            <li class="divider"></li>
+            <li><a href="http://www.heroesfire.com/hots/wiki/heroes/the-lost-vikings">Hero Information</a></li>
+          </ul>
+        </div>
+
+        <br />
+
         <h2>May 12th - May 19th 2015</h2>
         <div class="btn-group btn-group-primary">
           <button data-toggle="dropdown" class="btn btn-danger" type="button">E.T.C</button>
@@ -203,150 +345,6 @@
             <li><a href="http://www.heroesnexus.com/talent-calculator/43-thrall#GPtO0OnO1O_OuOrAA">Zuna's Talent Build</a></li>
             <li class="divider"></li>
             <li><a href="http://www.heroesfire.com/hots/wiki/heroes/thrall">Hero Information</a></li>
-          </ul>
-        </div>
-
-        <br />
-
-
-        <h2>May 5th - May 12th 2015</h2>
-        <div class="btn-group btn-group-primary">
-          <button data-toggle="dropdown" class="btn btn-info" type="button">Malfurion</button>
-          <button data-toggle="dropdown" class="btn btn-info dropdown-toggle" type="button"><span class="caret"></span>
-          </button>
-          <ul class="dropdown-menu">
-            <li><a><b>C9 iDream's Talent Order</b></a></li>
-            <li><a>Level 1 - Conjurer's Pursuit</a></li>
-            <li><a>Level 4 - Healing Ward</a></li>
-            <li><a>Level 7 - Enduring Growth</a></li>
-            <li><a>Level 10 - Tranquility</a></li>
-            <li><a>Level 13 - Ice Block</a></li>
-            <li><a>Level 16 - Hardened Focus</a></li>
-            <li><a>Level 20 - Storm Shield</a></li>
-            <li class="divider"></li>
-            <li><a href="http://www.heroesnexus.com/talent-calculator/16-malfurion#oPXK9FOB_FpPCPQAA">Zuna's Talent Build</a></li>
-            <li class="divider"></li>
-            <li><a href="http://www.heroesfire.com/hots/wiki/heroes/malfurion">Hero Information</a></li>
-          </ul>
-        </div>
-        <div class="btn-group btn-group-primary">
-          <button data-toggle="dropdown" class="btn btn-primary" type="button">Nova</button>
-          <button data-toggle="dropdown" class="btn btn-primary dropdown-toggle" type="button"><span class="caret"></span>
-          </button>
-          <ul class="dropdown-menu">
-            <li><a><b>C9 iDream's Talent Order</b></a></li>
-            <li><a>Level 1 - Ambush Snipe</a></li>
-            <li><a>Level 4 - Gathering Power</a></li>
-            <li><a>Level 7 - Anti-Armor Shells</a></li>
-            <li><a>Level 10 - Precision Strike</a></li>
-            <li><a>Level 13 - Lethal Decoy</a></li>
-            <li><a>Level 16 - Crippling Shot</a></li>
-            <li><a>Level 20 - Bolt of the Storm</a></li>
-            <li class="divider"></li>
-            <li><a href="http://www.heroesnexus.com/talent-calculator/14-nova#jP6MDCiApNIPUGOAA">Zuna's Talent Build</a></li>
-            <li class="divider"></li>
-            <li><a href="http://www.heroesfire.com/hots/wiki/heroes/nova">Hero Information</a></li>
-          </ul>
-        </div>
-        <div class="btn-group btn-group-primary">
-          <button data-toggle="dropdown" class="btn btn-info" type="button">Rehgar</button>
-          <button data-toggle="dropdown" class="btn btn-info dropdown-toggle" type="button"><span class="caret"></span>
-          </button>
-          <ul class="dropdown-menu">
-            <li><a><b>C9 iDream's Talent Order</b></a></li>
-            <li><a>Level 1 - Healing Ward</a></li>
-            <li><a>Level 4 - Farsight</a></li>
-            <li><a>Level 7 - Earth Shield</a></li>
-            <li><a>Level 10 - Ancestral Healing</a></li>
-            <li><a>Level 13 - Feral Lunge</a></li>
-            <li><a>Level 16 - Blood for Blood</a></li>
-            <li><a>Level 20 - Storm Shield</a></li>
-            <li class="divider"></li>
-            <li><a href="http://www.heroesnexus.com/talent-calculator/34-rehgar#jPOM1L9L3L4L7LiAA">Zuna's Talent Build</a></li>
-            <li class="divider"></li>
-            <li><a href="http://www.heroesfire.com/hots/wiki/heroes/rehgar">Hero Information</a></li>
-          </ul>
-        </div>
-        <div class="btn-group btn-group-primary">
-          <button data-toggle="dropdown" class="btn btn-danger" type="button">Tyrael</button>
-          <button data-toggle="dropdown" class="btn btn-danger dropdown-toggle" type="button"><span class="caret"></span>
-          </button>
-          <ul class="dropdown-menu">
-            <li><a><b>C9 iDream's Talent Order</b></a></li>
-            <li><a>Level 1 - Purge Evil</a></li>
-            <li><a>Level 4 - Retribution</a></li>
-            <li><a>Level 7 - Battle Momentum</a></li>
-            <li><a>Level 10 - Judgement</a></li>
-            <li><a>Level 13 - Imposing Will</a></li>
-            <li><a>Level 16 - Blood for Blood</a></li>
-            <li><a>Level 20 - Hardened Shield</a></li>
-            <li class="divider"></li>
-            <li><a href="http://www.heroesnexus.com/talent-calculator/19-tyrael#9OmPIHxBxInPRJTAA">Zuna's Talent Build</a></li>
-            <li><a href="https://www.youtube.com/watch?v=sdrrA0QHuMk">Video Commentary</a></li>
-            <li class="divider"></li>
-            <li><a href="http://www.heroesfire.com/hots/wiki/heroes/tyrael">Hero Information</a></li>
-          </ul>
-        </div>
-        <div class="btn-group btn-group-primary">
-          <button data-toggle="dropdown" class="btn btn-primary" type="button">Valla</button>
-          <button data-toggle="dropdown" class="btn btn-primary dropdown-toggle" type="button"><span class="caret"></span>
-          </button>
-          <ul class="dropdown-menu">
-            <li><a><b>C9 iDream's Talents</b></a></li>
-            <li><a>Level 1 - Composite Arrows</a></li>
-            <li><a>Level 4 - Arsenal</a></li>
-            <li><a>Level 7 - Repeating Arrow</a></li>
-            <li><a>Level 10 - Strafe</a></li>
-            <li><a>Level 13 - Frost Shot</a></li>
-            <li><a>Level 16 - Blood for Blood</a></li>
-            <li><a>Level 20 - Bolt of the Storm</a></li>
-            <li class="divider"></li>
-            <li><a href="http://www.heroesnexus.com/talent-calculator/15-valla#oPmPMFmBDPpBVKPAA">Zuna's Talent Build</a></li>
-            <li class="divider"></li>
-            <li><a href="http://www.heroesfire.com/hots/wiki/heroes/valla">Hero Information</a></li>
-          </ul>
-        </div>
-
-        <h3>Unlocked level 12</h3>
-        <div class="btn-group btn-group-primary">
-          <button data-toggle="dropdown" class="btn btn-danger" type="button">Chen</button>
-          <button data-toggle="dropdown" class="btn btn-danger dropdown-toggle" type="button"><span class="caret"></span>
-          </button>
-          <ul class="dropdown-menu">
-            <li><a><b>C9 iDream's Talent Order</b></a></li>
-            <li><a>Level 1 - Consuming Flame</a></li>
-            <li><a>Level 4 - Deep Breath</a></li>
-            <li><a>Level 7 - Combat Stance</a></li>
-            <li><a>Level 10 - Wandering Keg</a></li>
-            <li><a>Level 13 - Relentless</a></li>
-            <li><a>Level 16 - Pressure Point</a></li>
-            <li><a>Level 20 - Bolt of the Storm</a></li>
-            <li class="divider"></li>
-            <li><a href="http://www.heroesnexus.com/talent-calculator/36-chen#9OoMrMfMmM0MBPkAA">Zuna's Talent Build</a></li>
-            <li><a href="https://www.youtube.com/watch?v=j71Xdlq3QyQ">Video Commentary</a></li>
-            <li class="divider"></li>
-            <li><a href="http://www.heroesfire.com/hots/wiki/heroes/chen">Hero Information</a></li>
-          </ul>
-        </div>
-
-        <h3>Unlocked level 15</h3>
-        <div class="btn-group btn-group-primary">
-          <button data-toggle="dropdown" class="btn btn-success" type="button">Sylvanas</button>
-          <button data-toggle="dropdown" class="btn btn-success dropdown-toggle" type="button"><span class="caret"></span>
-          </button>
-          <ul class="dropdown-menu">
-            <li><a><b>C9 iDream's Talent Order</b></a></li>
-            <li><a>Level 1 - With the Wind</a></li>
-            <li><a>Level 4 - Envenom</a></li>
-            <li><a>Level 7 - Life Drain</a></li>
-            <li><a>Level 10 - Wailing Arrow</a></li>
-            <li><a>Level 13 - Splinter Shot</a></li>
-            <li><a>Level 16 - Cold Embrace</a></li>
-            <li><a>Level 20 - Bolt of the Storm</a></li>
-            <li class="divider"></li>
-            <li><a href="http://www.heroesfire.com/hots/talent-calculator/sylvanas#hcrC">Zuna's Talent Build</a></li>
-            <li class="divider"></li>
-            <li><a href="http://www.heroesfire.com/hots/wiki/heroes/sylvanas">Hero Information</a></li>
           </ul>
         </div>
 
